--- a/Copy_of_practice_regression.ipynb
+++ b/Copy_of_practice_regression.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/siya2436/NYU-Bootcamp-Midterm/blob/main/Copy_of_practice_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "lFzWhCnAUqp-"
       },
       "source": [
@@ -1505,8 +1495,7 @@
       "version": "3.12.0"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
